--- a/style/_hero.scss
+++ b/style/_hero.scss
@@ -1,8 +1,8 @@
 .hero {
   height: 100vh;
-
+  //
   &_heading {
-    position: relative;
+    position: absolute;
     top: 30%;
     text-align: center;
   }
