--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,4 +1,6 @@
 nav{
+  margin-top: 0rem;
+  padding-top: $marginVertical;
   padding-left: 0.625rem;
   padding-right: 0.625rem;
 display: flex;
